--- a/hugo.yaml
+++ b/hugo.yaml
@@ -65,7 +65,7 @@ params:
         avatar:
             enabled: true
             local: true
-            src: img/avatar.jpg_webp
+            src: img/avatar.jpg
 
     article:
         math: false
