--- a/.github/workflow/deploy.yaml
+++ b/.github/workflow/deploy.yaml
@@ -27,7 +27,7 @@ jobs:
         - name: Deploy Web
           uses: peaceiris/actions-gh-pages@v4
           with:
-              PERSONAL_TOKEN: ${{ secrets.Token}}
+              PERSONAL_TOKEN: ${{ secrets.TOKEN}}
               EXTERNAL_REPOSITORY: Menglf-mo/Menglf-Mo.github.io
               PUBLISH_BRANCH: main
               PUBLISH_DIR: ./public
