--- a/.github/workflow/deploy.yaml
+++ b/.github/workflow/deploy.yaml
@@ -28,7 +28,7 @@ jobs:
           uses: peaceiris/actions-gh-pages@v4
           with:
               PERSONAL_TOKEN: ${{ secrets.TOKEN}}
-              EXTERNAL_REPOSITORY: Menglf-mo/mo-blog
+              EXTERNAL_REPOSITORY: Menglf-mo/Menglf-Mo.github.io
               PUBLISH_BRANCH: main
               PUBLISH_DIR: ./public
               commit_message: auto deploy
