--- a/.github/workflow/deploy.yaml
+++ b/.github/workflow/deploy.yaml
@@ -29,6 +29,6 @@ jobs:
           with:
               PERSONAL_TOKEN: ${{secrets.TOKEN}}
               EXTERNAL_REPOSITORY: Menglf-mo/Menglf-Mo.github.io
-              PUBLISH_BRANCH: main
+              PUBLISH_BRANCH: master
               PUBLISH_DIR: ./public
               commit_message: auto deploy
