--- a/hugo.yaml
+++ b/hugo.yaml
@@ -1,4 +1,4 @@
-baseurl:  https://Menglf-Mo.github.io/
+baseurl:  https://menglf-mo.github.io/
 languageCode: en-us
 theme: hugo-theme-stack
 title: Menglf-mo
